Fixed button alignment bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,7 +110,7 @@ h2 {
     margin-top: 50px;
 }
 
-.btn { 
+.button { 
     margin-left: 25%;
 }
 
@@ -135,7 +135,4 @@ input[required]{
 }
 .btn-submit {
     margin-top: 30px;
-    margin-left: 45%;
-
-
 }
